--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "serialize-javascript": "^2.1.2",
-    "kind-of": "^6.0.3",
     "acorn": "^7.1.1",
     "minimist": "^1.2.3"
+  },
+  "resolutions": {
+    "kind-of": "^6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
