--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "minimist": "^1.2.3"
   },
   "resolutions": {
-    "kind-of": "^6.0.3"
+    "kind-of": "^6.0.3",
+    "dot-prop": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
