--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "resolutions": {
     "kind-of": "^6.0.3",
-    "dot-prop": "^5.1.1"
+    "dot-prop": "^5.1.1",
+    "elliptic": "^6.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
