--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-forge": "^0.10.0",
     "yargs-parser": "^13.1.2",
     "http-proxy": "1.18.1",
-    "object-path": "^0.11.5"
+    "object-path": "^0.11.5",
+    "ini": "^1.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
