--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dot-prop": "^5.1.1",
     "elliptic": "^6.5.3",
     "node-forge": "^0.10.0",
+    "node-notifier": "^8.0.1",
     "yargs-parser": "^13.1.2",
     "http-proxy": "1.18.1",
     "object-path": "^0.11.5",
