--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "yargs-parser": "^13.1.2",
     "http-proxy": "1.18.1",
     "object-path": "^0.11.5",
-    "ini": "^1.3.8"
+    "ini": "^1.3.8",
+    "immer": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
