--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "kind-of": "^6.0.3",
     "dot-prop": "^5.1.1",
     "elliptic": "^6.5.3",
+    "lodash": "^4.17.21",
     "node-forge": "^0.10.0",
     "node-notifier": "^8.0.1",
     "yargs-parser": "^13.1.2",
@@ -27,7 +28,10 @@
     "immer": "^8.0.1",
     "ssri": "^8.0.1",
     "is-svg": "^4.2.2",
-    "react-dev-utils": "^11.0.4"
+    "react-dev-utils": "^11.0.4",
+    "hosted-git-info": "^2.8.9",
+    "url-parse": "^1.5.0",
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
